# Linux-antivirus

./: CMakeLists.txt  FileController.cpp  FileHasher.cpp  FileHasher.h  FileManager.cpp  FileManager.h  HashesDatabase.cpp  HashesDatabase.h  QuarantineRecord.cpp  QuarantineRecord.h  dokumentacja_projektu.md  hash_database.txt  main.cpp
Controllers/: CLIController.cpp  FileController.cpp  QuarantineController.cpp
Headers/: CLIController.h  ConfigurationVariables.h  FileController.h  FileHasher.h  FileManager.h  QuarantineController.h
Source/: FileHasher.cpp  FileManager.cpp
